chore: Full refactor of evaluation system and UI

--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <link rel="icon" type="image/jpeg" href="/favicon.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Evals Platform</title>
+    <!-- Inline theme script to prevent flash of wrong theme (FOUC) -->
+    <script>
+      (function() {
+        try {
+          var theme = localStorage.getItem('ai-evals-theme') || 'system';
+          var resolved = theme === 'system'
+            ? (window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light')
+            : theme;
+          document.documentElement.setAttribute('data-theme', resolved);
+        } catch (e) {}
+      })();
+    </script>
+    <style>
+      /* Critical CSS: prevent white flash by setting background early */
+      html { background-color: #1A1A24; }
+      html:not([data-theme="dark"]) { background-color: #FFFFFF; }
+      html[data-theme="dark"] { background-color: #1A1A24; }
+    </style>
   </head>
   <body>
     <div id="root"></div>
